# permeatus

./: .gitignore  1layer.rpt  1layer_abaqus.pgf  2layer.rpt  2layer_abaqus.pgf  README.md  check.csv  nbtopy.sh  permeatus.py  planar_nlayer.py  pyproject.toml  pytonb.sh  read_report.py  setup.py  todo  tool_test.py
case_2layer_planar2d/: 2layer.py
docs/source/: Hydrogen.bib  api.rst  bibliography.rst  conf.py  documentation.rst  index.rst  usage.rst
permeatus/: __init__.py  arc.py  arc_nlayer.txt  homogenisation.py  infrastructure.py  layered1D.py  planar.py  planar_nlayer.txt  utils.py
permeatus/data/: abaqus_postscript.txt
tests/: CONC.csv  abaqus2layer.pgf  abaqus3layer.pgf  abaqus3layerp.pgf  abaqusnielsen.pgf  gmsh2layer.msh  gmsh_tests.py  gmshhole.msh  random_insert.rc  tool_test.py
tests/case_2layer_planar2d/: pickler.py  postprocess.py
tests/case_nlayer_arc2d/: arc_nlayer.py
tests/curved_coupon/: curved_coupon.py
tests/flat_coupon/: flat_coupon.py
tutorial/: tutorial.ipynb
