[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "permeatus"
version = "1.0.0"
authors = [
  {name = "Andrew Angus", email = "andrewangus27@gmail.com"},
]
description = "Permeation modelling tools built around finite element analysis."
readme = "README.md"
requires-python = '>=3.8'
dependencies = [
  "numpy",
  "matplotlib",
  "gmsh",
  "pandas",
  "scipy"
]

[project.urls]
Repository = "https://github.com/andrew-angus/permeatus.git"
